# derive_variants

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
