[package]
name = "derive_variants"
version = "0.1.0"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
categories = ["rust-patterns"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mbecker20/partial_derive2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

