[workspace]
members = ["derive", "example"]

[workspace.package]
version = "1.0.0"
description = "derives an additional enum from a nested enum that contains only variants and no nested fields"
repository = "https://github.com/mbecker20/derive_variants"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
categories = ["rust-patterns"]
edition = "2021"
license = "MIT"

[package]
name = "derive_variants"
documentation = "https://docs.rs/derive_variants"
description.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[patch.crates-io]
derive_variants_derive = { path = "derive" }

[dependencies]
derive_variants_derive = "1.0.0"
#
thiserror = "1.0.61"


